include/electionguard/ballot.h

/**
 * Enumeration used when marking a ballot as cast or spoiled
 */
typedef enum eg_ballot_box_state_e {
    /**
     * A ballot that has been explicitly cast
     */
    ELECTIONGUARD_BALLOT_BOX_STATE_CAST = 1,
    /**
     * A ballot that has been explicitly spoiled
     */
    ELECTIONGUARD_BALLOT_BOX_STATE_SPOILED = 2,

    /**
     * A ballot whose state is unknown to ElectionGuard and will not be included in any election results
     */
    ELECTIONGUARD_BALLOT_BOX_STATE_UNKNOWN = 999
} eg_ballot_box_state_t;
/**
 * A CiphertextBallotContest represents the selections made by a voter for a specific ContestDescription
 *
 * CiphertextBallotContest can only be a complete representation of a contest dataset.  While
 * PlaintextBallotContest supports a partial representation, a CiphertextBallotContest includes all data
 * necessary for a verifier to verify the contest.  Specifically, it includes both explicit affirmative
 * and negative selections of the contest, as well as the placeholder selections that satisfy
 * the ConstantChaumPedersen proof.
 *
 * Similar to `CiphertextBallotSelection` the consuming application can choose to discard or keep both
 * the `nonce` and the `proof` in some circumstances.  For deterministic nonce's derived from the
 * seed nonce, both values can be regenerated.  If the `nonce` for this contest is completely random,
 * then it is required in order to regenerate the proof.
 */
typedef struct eg_ciphertext_ballot_contest_s eg_ciphertext_ballot_contest_t;
/**
 * A CiphertextBallot represents a voters encrypted selections for a given ballot and ballot style.
 *
 * When a ballot is in it's complete, encrypted state, the `nonce` is the seed nonce
 * from which all other nonces can be derived to encrypt the ballot.  Allong with the `nonce`
 * fields on `Ballotcontest` and `BallotSelection`, this value is sensitive.
 *
 * Don't make this directly. Use `make_ciphertext_ballot` instead, or call `eg_encrypt_ballot` in encrypt.h.
 */
typedef struct eg_ciphertext_ballot_s eg_ciphertext_ballot_t;
/**
 * The unique ballot id that is meaningful to the consuming application.
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_get_object_id(eg_ciphertext_ballot_t *handle,
                                                                    char **out_object_id);
/**
 * The Object Id of the ballot style in the election manifest.  This value is used
 * to determine which contests to expect on the ballot, to fill in missing values,
 * and to validate that the ballot is well-formed
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_get_style_id(eg_ciphertext_ballot_t *handle,
                                                                   char **out_style_id);
/**
 * Hash of the complete Election Manifest to which this ballot belongs
 * 
 * @param[out] out_manifest_hash_ref An opaque pointer to the description hash.  
 *                          The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_get_manifest_hash(
  eg_ciphertext_ballot_t *handle, eg_element_mod_q_t **out_manifest_hash_ref);
/**
 * The seed hash for the ballot.  It may be the encryption device hash,
 * the hash of a previous ballot or the hash of some other value
 * that is meaningful to the consuming application.
 * 
 * @param[out] out_ballot_code_seed_ref An opaque pointer to the previous tracking or seed hash.  
 *                          The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_get_ballot_code_seed(
  eg_ciphertext_ballot_t *handle, eg_element_mod_q_t **out_ballot_code_seed_ref);
/**
 * Get the size of the contests collection
 */
EG_API uint64_t eg_ciphertext_ballot_get_contests_size(eg_ciphertext_ballot_t *handle);
/**
 * Get a contest at a specific index.
 * 
 * @param[in] in_index The index of the contest
 * @param[out] out_contest_ref An opaque pointer to the contest.  
 *                             The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t
eg_ciphertext_ballot_get_contest_at_index(eg_ciphertext_ballot_t *handle, uint64_t in_index,
                                          eg_ciphertext_ballot_contest_t **out_contest_ref);
/**
 * Unique ballot tracking code for this ballot
 * 
 * @param[out] out_ballot_code_ref An opaque pointer to the ballot code.  
 *                                   The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_get_ballot_code(
  eg_ciphertext_ballot_t *handle, eg_element_mod_q_t **out_ballot_code_ref);
/**
 * The timestamp indicating when the ballot was encrypted
 * as measured by the encryption device.  This value does not
 * provide units as it is up to the consuming system to indicate the scale.
 * Typically a consumer may use seconds since epoch or ticks since epoch
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_get_timestamp(eg_ciphertext_ballot_t *handle,
                                                                    uint64_t *out_timestamp);
/**
 * The hash of the encrypted values on this ballot in sequence order
 * 
 * @param[out] out_hash_ref An opaque pointer to the crypto hash.  
 *                          The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_get_crypto_hash(
  eg_ciphertext_ballot_t *handle, eg_element_mod_q_t **out_hash_ref);
// TODO: eg_ciphertext_ballot_make

EG_API bool eg_ciphertext_ballot_is_valid_encryption(
  eg_ciphertext_ballot_t *handle, eg_element_mod_q_t *in_manifest_hash,
  eg_element_mod_p_t *in_public_key, eg_element_mod_q_t *in_crypto_extended_base_hash);
/**
 * Import the ballot representation from JSON
 */
EG_API eg_electionguard_status_t
eg_ciphertext_ballot_from_json(char *in_data, eg_ciphertext_ballot_t **out_handle);
/**
 * Import the ballot representation from BSON
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_from_bson(
  uint8_t *in_data, uint64_t in_length, eg_ciphertext_ballot_t **out_handle);
/**
 * Import the ballot representation from MsgPack
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_from_msgpack(
  uint8_t *in_data, uint64_t in_length, eg_ciphertext_ballot_t **out_handle);
/**
 * Export the ballot representation as JSON
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_to_json(eg_ciphertext_ballot_t *handle,
                                                              char **out_data, uint64_t *out_size);
/**
 * Export the ballot representation as JSON with nonce values
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_to_json_with_nonces(
  eg_ciphertext_ballot_t *handle, char **out_data, uint64_t *out_size);
/**
 * Export the ballot representation as BSON
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_to_bson(eg_ciphertext_ballot_t *handle,
                                                              uint8_t **out_data,
                                                              uint64_t *out_size);
/**
 * Export the ballot representation as BSON with nonce values
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_to_bson_with_nonces(
  eg_ciphertext_ballot_t *handle, uint8_t **out_data, uint64_t *out_size);
/**
 * Export the ballot representation as MsgPack
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_to_msgpack(eg_ciphertext_ballot_t *handle,
                                                                 uint8_t **out_data,
                                                                 uint64_t *out_size);
/**
 * Export the ballot representation as MsgPack with nonce values
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_to_msgpack_with_nonces(
  eg_ciphertext_ballot_t *handle, uint8_t **out_data, uint64_t *out_size);
/**
 * A `SubmittedBallot` represents a ballot that is submitted for inclusion in election results.
 * A submitted ballot is or is about to be either cast or spoiled.
 * The state supports the `BallotBoxState.UNKNOWN` enumeration to indicate that this object is mutable
 * and has not yet been explicitly assigned a specific state.
 *
 * Note, additionally, this ballot includes all proofs but no nonces.
 *
 * Do not make this class directly. Use `eg_submitted_ballot_from` instead.
 */
typedef struct eg_submitted_ballot_s eg_submitted_ballot_t;
// no constructors defined.  use `eg_submitted_ballot_from` in encrypt.h

EG_API eg_electionguard_status_t eg_submitted_ballot_free(eg_submitted_ballot_t *handle);
/**
 * The state of the ballot (cast, spoiled, or unknown)
 */
EG_API eg_ballot_box_state_t eg_submitted_ballot_get_state(eg_submitted_ballot_t *handle);
/**
 * Convert a `CiphertextBallot` into a `SubmittedBallot`, with all nonces removed.
 * 
 * @param[in] in_ciphertext: the ciphertext ballot
 * @param[in] in_state: The ballot box state (cast, spoiled, unknown)
 * @param[out] out_handle a handle to an `eg_submitted_ballot_t` instance.  Caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t eg_submitted_ballot_from(eg_ciphertext_ballot_t *in_ciphertext,
                                                          eg_ballot_box_state_t in_state,
                                                          eg_submitted_ballot_t **out_handle);
/**
 * Import the ballot representation from JSON
 */
EG_API eg_electionguard_status_t eg_submitted_ballot_from_json(char *in_data,
                                                               eg_submitted_ballot_t **out_handle);
/**
 * Import the ballot representation from BSON
 */
EG_API eg_electionguard_status_t eg_submitted_ballot_from_bson(uint8_t *in_data, uint64_t in_length,
                                                               eg_submitted_ballot_t **out_handle);
/**
 * Import the ballot representation from MsgPack
 */
EG_API eg_electionguard_status_t eg_submitted_ballot_from_msgpack(
  uint8_t *in_data, uint64_t in_length, eg_submitted_ballot_t **out_handle);