bindings/netstandard/ElectionGuard/ElectionGuard.Encryption/NativeInterface.cs


            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_challenge",
                CallingConvention = CallingConvention.Cdecl,
                SetLastError = true)]
            internal static extern Status Challenge(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_from_json",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromJson(
                [MarshalAs(UnmanagedType.LPStr)] string data,
                out ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_from_bson",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromBson(
                byte* data, ulong length, out ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_from_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromMsgPack(
                byte* data, ulong length, out ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_to_json",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToJson(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_to_json_with_nonces",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToJsonWithNonces(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_to_bson",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToBson(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_to_bson_with_nonces",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToBsonWithNonces(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_to_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToMsgPack(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_to_msgpack_with_nonces",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToMsgPackWithNonces(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle, out IntPtr data, out ulong size);
        }

        internal static class CompactCiphertextBallot
        {
            internal struct CompactCiphertextBallotType { };

            internal class CompactCiphertextBallotHandle
                : ElectionGuardSafeHandle<CompactCiphertextBallotType>
            {
#if NETSTANDARD
                [ReliabilityContract(Consistency.WillNotCorruptState, Cer.MayFail)]
#endif
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = CompactCiphertextBallot.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"CompactCiphertextBallot Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_compact_ciphertext_ballot_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(CompactCiphertextBallotType* handle);

            [DllImport(DllName, EntryPoint = "eg_compact_ciphertext_ballot_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                CompactCiphertextBallotHandle handle, out IntPtr object_id);

            [DllImport(DllName, EntryPoint = "eg_compact_ciphertext_ballot_from_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromMsgPack(
                byte* data, ulong size, out CompactCiphertextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_compact_ciphertext_ballot_to_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToMsgPack(
                CompactCiphertextBallotHandle handle, out IntPtr data, out ulong size);

        }

        #endregion

        #region SubmittedBallot

        internal static class SubmittedBallot
        {
            internal struct SubmittedBallotType { };

            internal class SubmittedBallotHandle
                : ElectionGuardSafeHandle<SubmittedBallotType>
            {
#if NETSTANDARD
                [ReliabilityContract(Consistency.WillNotCorruptState, Cer.MayFail)]
#endif
                protected override bool Free()
                {
                    if (IsFreed) return true;

                    var status = SubmittedBallot.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"SubmittedBallot Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_submitted_ballot_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(SubmittedBallotType* handle);

            [DllImport(DllName, EntryPoint = "eg_submitted_ballot_get_state",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern BallotBoxState GetState(SubmittedBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_submitted_ballot_from",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status From(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle ciphertext,
                BallotBoxState state,
                out SubmittedBallotHandle handle);

            #region CiphertextBallot Methods

            // Since the underlying c++ class inherits from CiphertextBallot
            // these functions call those methods subsituting the SubmittedBallot opaque pointer type

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                SubmittedBallotHandle handle, out IntPtr object_id);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_style_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetStyleId(
               SubmittedBallotHandle handle, out IntPtr style_id);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_manifest_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetManifestHash(
                SubmittedBallotHandle handle,
                out ElementModQ.ElementModQHandle manifest_hash_ref);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_ballot_code_seed",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetBallotCodeSeed(
                SubmittedBallotHandle handle,
                out ElementModQ.ElementModQHandle ballot_code_seed_ref);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_contests_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetContestsSize(SubmittedBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_contest_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetContestAtIndex(
                SubmittedBallotHandle handle,
                ulong index,
                out ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle contest_ref);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_ballot_code",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetBallotCode(
                SubmittedBallotHandle handle,
                out ElementModQ.ElementModQHandle ballot_code_ref);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_timestamp",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetTimestamp(
                SubmittedBallotHandle handle);

            // GetNonce is not provided

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetCryptoHash(
                SubmittedBallotHandle handle,
                out ElementModQ.ElementModQHandle hash_ref);

            // CryptoHashWith is not provided

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_is_valid_encryption",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern bool IsValidEncryption(
                SubmittedBallotHandle handle,
                ElementModQ.ElementModQHandle manifest_hash,
                ElementModP.ElementModPHandle public_key,
                ElementModQ.ElementModQHandle crypto_extended_base_hash);

            #endregion

            [DllImport(DllName, EntryPoint = "eg_submitted_ballot_from_json",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromJson(
                [MarshalAs(UnmanagedType.LPStr)] string data,
                out SubmittedBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_submitted_ballot_from_bson",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromBson(
                byte* data, ulong length, out SubmittedBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_submitted_ballot_from_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromMsgPack(
                byte* data, ulong length, out SubmittedBallotHandle handle);
